--- a/Implementierung/Restaurant/Restaurant/MainWindow.xaml
+++ b/Implementierung/Restaurant/Restaurant/MainWindow.xaml
@@ -53,14 +53,18 @@
             <TextBlock Text="Speisekarte verwalten" Style="{StaticResource Überschrift}" Grid.Column="1"/>
             <Button Content="Menü" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="75" Margin="16" Grid.Column="1" Click="Button_ZumHauptmenü"/>
             
-            <DataGrid Grid.Row="1" Grid.Column="1">
+            <DataGrid Grid.Row="1" Grid.Column="1" Name="dataGrid"
+                      AutoGenerateColumns="False" 
+                      ItemsSource="{Binding }" 
+                      IsSynchronizedWithCurrentItem="True">
+                
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Name"/>
-                    <DataGridTextColumn Header="Preis"/>
-                    <DataGridTextColumn Header="Beschreibung / Zutaten"/>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Preis" Binding="{Binding Preis}"/>
+                    <DataGridTextColumn Header="Beschreibung / Zutaten" Binding="{Binding Beschreibung}"/>
                 </DataGrid.Columns>
             </DataGrid>
-            
+
             <UniformGrid Grid.Column="1" Grid.Row="2" Margin="20" Height="250">
                 <UniformGrid.Resources>
                     <Style TargetType="Button">
@@ -69,9 +73,10 @@
                         <Setter Property="Width" Value="300"/>
                     </Style>
                 </UniformGrid.Resources>
-                <Button Content="Ausgewähltes Element löschen" Background="Red" Opacity="0.75"/>
+                <Button Content="Ausgewähltes Element löschen" Background="Red" Opacity="0.75" Click="Button_DeleteCurrentItem" />
                 <Button Content="Änderungen Speichern" Background="Green" Opacity="0.75" Click="Button_SaveChanges"/>
             </UniformGrid>
+            <Label  x:Name="AusgewähltesProdukt_ID" Content="{Binding /ID_Speise}" Visibility="Hidden"/>
 
         </Grid>
     </Grid>
