--- a/Implementierung/Restaurant-Bestellungen _mit_SQL/Restaurant-Bestellungen/MainWindow.xaml
+++ b/Implementierung/Restaurant-Bestellungen _mit_SQL/Restaurant-Bestellungen/MainWindow.xaml
@@ -5,44 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Restaurant_Bestellungen"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1600">
+        Title="MainWindow" Height="1000" Width="1600" FontSize="20" WindowState="Maximized">
+    
     <Window.Resources>
         <Style x:Key="ButtonStyle" TargetType="Button">
-            <Setter Property="Height" Value="100"/>
-            <Setter Property="Width" Value="300"/>
+            <Setter Property="FontSize" Value="32"/>
+            <Setter Property="Background" Value="SkyBlue"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="2"/>
         </Style>
         <Style x:Key="Überschrift" TargetType="TextBlock">
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="FontSize" Value="32"/>
+            <Setter Property="FontSize" Value="52"/>
             <Setter Property="TextDecorations" Value="Underline"/>
+            <Setter Property="FontFamily" Value="Garamond"/>
+        </Style>
+
+        <Style x:Key="Datagrid" TargetType="DataGrid">
+            <Setter Property="IsSynchronizedWithCurrentItem" Value="True"/>
+            <Setter Property="CanUserAddRows" Value="False"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="AutoGenerateColumns" Value="False"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style>
     </Window.Resources>
+
     <Grid>
+        
+        <Border CornerRadius="6" HorizontalAlignment="Left" VerticalAlignment="Top" Height="60" Width="75" Margin="20" Grid.Column="1" BorderThickness="2" BorderBrush="Black">
+            <Button Content="Menü"  Click="Button_ZumHauptmenü" BorderThickness="0" Margin="1"/> <!--immer sichtbar-->            
+        </Border>
 
         <Grid x:Name="MainGrid_Menü" d:IsHidden="True">
             <Grid.RowDefinitions>
-                <RowDefinition Height="75"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="25"/>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Gruppe 4" Style="{StaticResource Überschrift}"/>
-            <UniformGrid Grid.Row="1">
+            <TextBlock Text="Gruppe 4 (Francesco, Wael)" Style="{StaticResource Überschrift}"/>
+            <UniformGrid Grid.Row="1" Margin="100,0">
                 <UniformGrid.Resources>
                     <Style TargetType="Button" BasedOn="{StaticResource ButtonStyle}"/>
                 </UniformGrid.Resources>
-                <Button Content="Speisekarte verwalten" Click="Button_SpeisekarteVerwalten"/>
+                <Button Content="Speisekarte verwalten" Click="Button_SpeisekarteVerwalten" Background="CornflowerBlue"/>
                 <Button Content="Rechnung erstellen" Click="Button_RechnungErstellen"/>
                 <Button Content="Rechnungsübersicht" Click="Button_Rechnungsübersicht"/>
-                <Button Content="Github Repository" Click="Button_Github"/>
+                <Button Content="Github Repository" Click="Button_Github" Background="CornflowerBlue"/>
             </UniformGrid>
         </Grid>
 
-        <Grid x:Name="MainGrid_SpeisekarteVerwalten" d:IsHidden="True" >
+        <Grid x:Name="MainGrid_SpeisekarteVerwalten" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="75"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="3*"/>
                 <RowDefinition Height="2*"/>
-                <RowDefinition Height="*"/>
                 <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -51,17 +70,13 @@
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
             <TextBlock Text="Speisekarte verwalten" Style="{StaticResource Überschrift}" Grid.Column="1"/>
-            <Button Content="Menü" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="75" Margin="16" Grid.Column="1" Click="Button_ZumHauptmenü"/>
 
-            <DataGrid Grid.Row="1" Grid.Column="1" Name="dataGrid"
-                      AutoGenerateColumns="False" 
-                      ItemsSource="{Binding }" 
-                      IsSynchronizedWithCurrentItem="True"
-                      CanUserAddRows="False">
-
+            <DataGrid Grid.Row="1" Grid.Column="1"
+                      Style="{StaticResource Datagrid}"
+                      ItemsSource="{Binding }">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Produkt_Name}" Width="2*"/>
-                    <DataGridTextColumn Header="Preis" Binding="{Binding Preis}" Width="*"/>
+                    <DataGridTextColumn Header="Preis" Binding="{Binding Preis}" Width="*" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Beschreibung / Zutaten" Binding="{Binding Beschreibung}" Width="3*"/>
                 </DataGrid.Columns>
             </DataGrid>
@@ -74,7 +89,7 @@
                         <Setter Property="VerticalContentAlignment" Value="Center" />
                     </Style>
                 </StackPanel.Resources>
-                <TextBlock FontSize="18" Text="Produkt hinzufügen"/>
+                <TextBlock Text="Produkt hinzufügen"/>
                 <TextBlock Text="Name"/>
                 <TextBox x:Name="AddName"/>
                 <TextBlock Text="Preis"/>
@@ -88,59 +103,58 @@
                 <UniformGrid.Resources>
                     <Style TargetType="Button">
                         <Setter Property="Height" Value="50"/>
-                        <Setter Property="Width" Value="300"/>
+                        <Setter Property="Width" Value="500"/>
+                        <Setter Property="Opacity" Value="0.75"/>
                     </Style>
                 </UniformGrid.Resources>
-                <Button Content="Ausgewähltes Element löschen" Background="Red" Opacity="0.75" Click="Button_DeleteCurrentItem" />
-                <Button Content="Änderungen Speichern" Background="Green" Opacity="0.75" Click="Button_SaveChanges"/>
+                <Button Content="Ausgewähltes Element löschen" Background="Red" Click="Button_DeleteCurrentItem" />
+                <Button Content="Änderungen Speichern" Background="Green" Click="Button_SaveChanges"/>
             </UniformGrid>
-            <Label  x:Name="AusgewähltesProdukt_ID" Content="{Binding /Produkt_ID}" Visibility="Hidden"/>
+            
+            <Label  x:Name="AusgewähltesProdukt_ID" Content="{Binding /Produkt_ID}" Visibility="Hidden"/> <!--Für Produkt löschen-->
         </Grid>
 
-        <Grid x:Name="MainGrid_Rechnungsübersicht" >
+        <Grid x:Name="MainGrid_Rechnungsübersicht" d:IsHidden="True" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="150"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
-
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
+
             <TextBlock Text="Rechnungsübersicht" Style="{StaticResource Überschrift}" Grid.Column="1"/>
-            <Button Content="Menü" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="75" Margin="16" Grid.Column="1" Click="Button_ZumHauptmenü"/>
-
-            <DataGrid Grid.Row="1" Grid.Column="1" Name="Grid_Rechnungen"
-                      AutoGenerateColumns="False" 
-                      ItemsSource="{Binding }" 
-                      IsSynchronizedWithCurrentItem="True" 
-                      CanUserAddRows="False" 
-                      IsReadOnly="True"
-                      MouseDown="Grid_Rechnungen_MouseDown">
-
+            
+            <DataGrid Grid.Row="1" Grid.Column="1" 
+                      Name="Grid_Rechnungen"
+                      Style="{StaticResource Datagrid}"
+                      ItemsSource="{Binding }"                                
+                      MouseDown="Grid_Rechnungen_MouseDown" >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}" Width="*"/>
+                    <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}" Width="*" IsReadOnly="True" />
                     <DataGridTextColumn Header="Status" Binding="{Binding Rechnung_status}" Width="*"/>
-                    <DataGridTextColumn Header="Datum" Binding="{Binding Rechnung_datum}" Width="*"/>
-                    <DataGridTextColumn Header="Tischnummer" Binding="{Binding Tisch_Nummer}" Width="*"/>
-                    <DataGridTextColumn Header="erstellt von" Width="0.5*"/>
+                    <DataGridTextColumn Header="Datum" Binding="{Binding Rechnung_datum}" Width="1.5*"/>
+                    <DataGridTextColumn Header="Tischnummer" Binding="{Binding Tisch_Nummer}" Width="0.4*"/>
                     <DataGridTextColumn Header="Vorname" Binding="{Binding Mitarbeiter.Vorname}" Width="*"/>
                     <DataGridTextColumn Header="Nachname" Binding="{Binding Mitarbeiter.Nachname}" Width="*"/>
-                    <DataGridTextColumn Header="Email" Binding="{Binding Mitarbeiter.Email}" Width="*"/>
+                    <DataGridTextColumn Header="Email" Binding="{Binding Mitarbeiter.Email}" Width="2*"/>
                     <DataGridTextColumn Header="Telefon" Binding="{Binding Mitarbeiter.Telefon}" Width="*"/>
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel Grid.Row="2" Grid.Column="1" Margin="0, 20">
 
-                <TextBlock Text="Positionen"/>
-                <DataGrid  Name="Grid_Rechnungselemente"
-                      AutoGenerateColumns="False" 
-                      ItemsSource="{Binding }" 
-                      IsSynchronizedWithCurrentItem="True" 
-                      CanUserAddRows="False" 
-                      IsReadOnly="True" >
+            <StackPanel Grid.Row="2" Grid.Column="1" Margin="0, 0">
+                <Grid>
+                    <Label Content="Doppelklick auf die Rechnungsnummer für Details"/>
+                    <Button Width="100" Click="Button_Status_ändern_Rechnungen" Content="Speichern" HorizontalAlignment="Right"/>
+                </Grid>
+                
+                <TextBlock Text="Positionen" FontSize="24" Margin="0,10,0,0"/>
+                <DataGrid  Name="Grid_Rechnungselemente" 
+                      Style="{StaticResource Datagrid}"
+                      ItemsSource="{Binding }" IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}"  Width="*"/>
                         <DataGridTextColumn Header="Produkt" Binding="{Binding Speise.Produkt_Name}"  Width="*"/>
@@ -149,8 +163,11 @@
                         <DataGridTextColumn Header="Anzahl" Binding="{Binding Anzahl}"  Width="*"/>
                     </DataGrid.Columns>
                 </DataGrid>
-                <TextBlock x:Name="Total" Text="Total: Bsp. 200€" HorizontalAlignment="Right" Margin="10"/>
-
+                <WrapPanel HorizontalAlignment="Right">
+                    <TextBlock Text="Insgesamt:" Margin="5,0"/>
+                    <TextBlock x:Name="Total" />
+                    <TextBlock Text="€" />
+                </WrapPanel>
             </StackPanel>
         </Grid>
     </Grid>
