--- a/Implementierung/Restaurant-Bestellungen _mit_SQL/Restaurant-Bestellungen/MainWindow.xaml
+++ b/Implementierung/Restaurant-Bestellungen _mit_SQL/Restaurant-Bestellungen/MainWindow.xaml
@@ -34,9 +34,10 @@
     </Window.Resources>
 
     <Grid>
-        
+
         <Border CornerRadius="6" HorizontalAlignment="Left" VerticalAlignment="Top" Height="60" Width="75" Margin="20" Grid.Column="1" BorderThickness="2" BorderBrush="Black">
-            <Button Content="Menü"  Click="Button_ZumHauptmenü" BorderThickness="0" Margin="1"/> <!--immer sichtbar-->            
+            <Button Content="Menü"  Click="Button_ZumHauptmenü" BorderThickness="0" Margin="1"/>
+            <!--immer sichtbar-->
         </Border>
 
         <Grid x:Name="MainGrid_Menü" d:IsHidden="True">
@@ -57,7 +58,7 @@
             </UniformGrid>
         </Grid>
 
-        <Grid x:Name="MainGrid_SpeisekarteVerwalten" >
+        <Grid x:Name="MainGrid_SpeisekarteVerwalten" d:IsHidden="True" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="3*"/>
@@ -110,8 +111,9 @@
                 <Button Content="Ausgewähltes Element löschen" Background="Red" Click="Button_DeleteCurrentItem" />
                 <Button Content="Änderungen Speichern" Background="Green" Click="Button_SaveChanges"/>
             </UniformGrid>
-            
-            <Label  x:Name="AusgewähltesProdukt_ID" Content="{Binding /Produkt_ID}" Visibility="Hidden"/> <!--Für Produkt löschen-->
+
+            <Label  x:Name="AusgewähltesProdukt_ID" Content="{Binding /Produkt_ID}" Visibility="Hidden"/>
+            <!--Für Produkt löschen-->
         </Grid>
 
         <Grid x:Name="MainGrid_Rechnungsübersicht" d:IsHidden="True" >
@@ -127,7 +129,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Text="Rechnungsübersicht" Style="{StaticResource Überschrift}" Grid.Column="1"/>
-            
+
             <DataGrid Grid.Row="1" Grid.Column="1" 
                       Name="Grid_Rechnungen"
                       Style="{StaticResource Datagrid}"
@@ -150,7 +152,7 @@
                     <Label Content="Doppelklick auf die Rechnungsnummer für Details"/>
                     <Button Width="100" Click="Button_Status_ändern_Rechnungen" Content="Speichern" HorizontalAlignment="Right"/>
                 </Grid>
-                
+
                 <TextBlock Text="Positionen" FontSize="24" Margin="0,10,0,0"/>
                 <DataGrid  Name="Grid_Rechnungselemente" 
                       Style="{StaticResource Datagrid}"
@@ -169,6 +171,77 @@
                     <TextBlock Text="€" />
                 </WrapPanel>
             </StackPanel>
+        </Grid>
+
+        <Grid x:Name="MainGrid_Rechungen_erstellen" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="150"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+            </Grid.ColumnDefinitions>
+            
+            <ListView Grid.Row="1" Grid.Column="1"
+                  x:Name="SpeiseAufnehmen" 
+                  IsSynchronizedWithCurrentItem="True"
+                  ItemsSource="{Binding }" SelectedIndex="1" MouseDoubleClick="RechnungAufnehmen" 
+                      Grid.RowSpan="2">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>                   
+                                <Run Text="{Binding Produkt_ID}"/>
+                                <Run Text=" - "/>
+                                <Run Text="{Binding Produkt_Name}"/>
+                                <Run Text=" - "/>
+                                <Run Text="{Binding Preis}"/>
+                                <Run Text="("/>
+                                <Run Text="{Binding Beschreibung}"/>
+                                <Run Text=")"/>
+                        </TextBlock>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <!--<ListView Grid.Row="1" Grid.Column="2" ItemsSource="{Binding }" Name="Bestellung"
+                  IsSynchronizedWithCurrentItem="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>                            
+                                <Run Text="{Binding Speise.Produkt_ID}"/>
+                                <Run Text=" - "/>
+                                <Run Text="{Binding Preis}"/>
+                                <Run Text="("/>
+                                <Run Text="{Binding Beschreibung}"/>
+                                <Run Text=")"/>
+                        </TextBlock>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>-->
+            <WrapPanel Grid.Row="1" Grid.Column="2" >
+                <TextBlock Margin="10" Text="Mitarbeiter ID:"/>
+                <TextBox x:Name="ID_Mitarbeiter" Width="100"/>
+                
+                <TextBlock Margin="10" Text="Tischnummer:"/>
+                <TextBox x:Name="Tischnummer" Width="100"/>
+                <DataGrid ItemsSource="{Binding }" Name="Bestellung" AutoGenerateColumns="False" IsReadOnly="True" MouseDoubleClick="Delete">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Produkt ID" Binding="{Binding Speise.Produkt_ID}" Width="*"/>
+                        <DataGridTextColumn Header="Name" Binding="{Binding Speise.Produkt_Name}" Width="*"/>
+                        <DataGridTextColumn Header="Anzahl" Binding="{Binding Anzahl}" Width="*"/>
+                        <DataGridTextColumn Header="Preis" Binding="{Binding Speise.Preis}" Width="*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <TextBlock Text="Insgesamt:" Margin="5,0"/>
+                    <TextBlock x:Name="Rechnungskosten"/>
+                <TextBlock Text="€" />
+            </WrapPanel>
+            <Button Grid.Column="2" Grid.Row="2" Click="Rechnung_Speichern"/>
         </Grid>
     </Grid>
 </Window>
