--- a/Implementierung/Restaurant/Restaurant/App.xaml
+++ b/Implementierung/Restaurant/Restaurant/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Restaurant_Bestellungen.App"
+﻿<Application x:Class="Restaurant.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Restaurant_Bestellungen"
+             xmlns:local="clr-namespace:Restaurant"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
