--- a/Implementierung/Restaurant/Restaurant/MainWindow.xaml
+++ b/Implementierung/Restaurant/Restaurant/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Restaurant_Bestellungen.MainWindow"
+﻿<Window x:Class="Restaurant.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Restaurant_Bestellungen"
+        xmlns:local="clr-namespace:Restaurant"
         mc:Ignorable="d"
-    Title="MainWindow" Height="1000" Width="1600" FontSize="20" WindowState="Maximized">
+     Title="Gruppe 4" Height="1000" Width="1600" FontSize="20" WindowState="Maximized">
 
     <Window.Resources>
         <Style x:Key="ButtonStyle" TargetType="Button">
@@ -58,7 +58,7 @@
             </UniformGrid>
         </Grid>
 
-        <Grid x:Name="MainGrid_SpeisekarteVerwalten" >
+        <Grid x:Name="MainGrid_SpeisekarteVerwalten" d:IsHidden="True" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="3*"/>
@@ -139,7 +139,7 @@
                     <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}" Width="*" IsReadOnly="True" />
                     <DataGridTextColumn Header="Status" Binding="{Binding Rechnung_status}" Width="*"/>
                     <DataGridTextColumn Header="Datum" Binding="{Binding Rechnung_datum}" Width="1.5*"/>
-                    <DataGridTextColumn Header="Tischnummer" Binding="{Binding Tisch_Nummer}" Width="0.4*"/>
+                    <DataGridTextColumn Header="Tischnummer" Binding="{Binding Tisch_ID}" Width="0.4*"/>
                     <DataGridTextColumn Header="Vorname" Binding="{Binding Mitarbeiter.Vorname}" Width="*"/>
                     <DataGridTextColumn Header="Nachname" Binding="{Binding Mitarbeiter.Nachname}" Width="*"/>
                     <DataGridTextColumn Header="Email" Binding="{Binding Mitarbeiter.Email}" Width="2*"/>
@@ -171,6 +171,62 @@
                     <TextBlock Text="€" />
                 </WrapPanel>
             </StackPanel>
+        </Grid>
+
+        <Grid x:Name="MainGrid_Rechungen_erstellen" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150"/>
+                <RowDefinition Height="5*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="150"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+            </Grid.ColumnDefinitions>
+
+            <ListView Grid.Row="1" Grid.Column="1"
+                  x:Name="SpeiseAufnehmen" 
+                  IsSynchronizedWithCurrentItem="True"
+                  ItemsSource="{Binding }" SelectedIndex="1" MouseDoubleClick="RechnungAufnehmen" 
+                      Grid.RowSpan="2">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>                   
+                                <Run Text="{Binding Produkt_ID}"/>
+                                <Run Text=" - "/>
+                                <Run Text="{Binding Produkt_Name}"/>
+                                <Run Text=" - "/>
+                                <Run Text="{Binding Preis}"/>
+                                <Run Text="("/>
+                                <Run Text="{Binding Beschreibung}"/>
+                                <Run Text=")"/>
+                        </TextBlock>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <WrapPanel Grid.Row="1" Grid.Column="2" >
+                <TextBlock Margin="10" Text="Mitarbeiter ID:"/>
+                <TextBox x:Name="ID_Mitarbeiter" Width="100"/>
+
+                <TextBlock Margin="10" Text="Tischnummer:"/>
+                <TextBox x:Name="Tischnummer" Width="100"/>
+                <DataGrid ItemsSource="{Binding }" Name="Bestellung" AutoGenerateColumns="False" IsReadOnly="True" MouseDoubleClick="Delete">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Produkt ID" Binding="{Binding Speise.Produkt_ID}" Width="*"/>
+                        <DataGridTextColumn Header="Name" Binding="{Binding Speise.Produkt_Name}" Width="*"/>
+                        <DataGridTextColumn Header="Anzahl" Binding="{Binding Anzahl}" Width="*"/>
+                        <DataGridTextColumn Header="Preis" Binding="{Binding Speise.Preis}" Width="*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <TextBlock Text="Insgesamt:" Margin="5,0"/>
+                <TextBlock x:Name="Rechnungskosten"/>
+                <TextBlock Text="€" />
+            </WrapPanel>
+            <Button Grid.Column="2" Grid.Row="2" Click="Rechnung_Speichern" Content="Rechnung erstellen"/>
         </Grid>
     </Grid>
 </Window>
