--- a/Implementierung/Restaurant/Restaurant/MainWindow.xaml
+++ b/Implementierung/Restaurant/Restaurant/MainWindow.xaml
@@ -40,7 +40,7 @@
             <!--immer sichtbar-->
         </Border>
 
-        <Grid x:Name="MainGrid_Menü" d:IsHidden="True">
+        <Grid x:Name="MainGrid_Menü">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="4*"/>
@@ -81,7 +81,6 @@
                     <DataGridTextColumn Header="Beschreibung / Zutaten" Binding="{Binding Beschreibung}" Width="3*"/>
                 </DataGrid.Columns>
             </DataGrid>
-
             <StackPanel Grid.Column="1" Grid.Row="2" Margin="0, 20">
                 <StackPanel.Resources>
                     <Style TargetType="TextBox">
@@ -98,8 +97,6 @@
                 <TextBlock Text="Beschreibung"/>
                 <TextBox x:Name="AddBeschreibung"/>
             </StackPanel>
-
-
             <UniformGrid Grid.Column="1" Grid.Row="3" Height="100">
                 <UniformGrid.Resources>
                     <Style TargetType="Button">
@@ -116,64 +113,8 @@
             <!--Für Produkt löschen-->
         </Grid>
 
-        <Grid x:Name="MainGrid_Rechnungsübersicht" d:IsHidden="True" >
-            <Grid.RowDefinitions>
-                <RowDefinition Height="150"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="100"/>
-            </Grid.ColumnDefinitions>
 
-            <TextBlock Text="Rechnungsübersicht" Style="{StaticResource Überschrift}" Grid.Column="1"/>
-
-            <DataGrid Grid.Row="1" Grid.Column="1" 
-                      Name="Grid_Rechnungen"
-                      Style="{StaticResource Datagrid}"
-                      ItemsSource="{Binding }"                                
-                      MouseDown="Grid_Rechnungen_MouseDown" >
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}" Width="*" IsReadOnly="True" />
-                    <DataGridTextColumn Header="Status" Binding="{Binding Rechnung_status}" Width="*"/>
-                    <DataGridTextColumn Header="Datum" Binding="{Binding Rechnung_datum}" Width="1.5*"/>
-                    <DataGridTextColumn Header="Tischnummer" Binding="{Binding Tisch_ID}" Width="0.4*"/>
-                    <DataGridTextColumn Header="Vorname" Binding="{Binding Mitarbeiter.Vorname}" Width="*"/>
-                    <DataGridTextColumn Header="Nachname" Binding="{Binding Mitarbeiter.Nachname}" Width="*"/>
-                    <DataGridTextColumn Header="Email" Binding="{Binding Mitarbeiter.Email}" Width="2*"/>
-                    <DataGridTextColumn Header="Telefon" Binding="{Binding Mitarbeiter.Telefon}" Width="*"/>
-                </DataGrid.Columns>
-            </DataGrid>
-
-            <StackPanel Grid.Row="2" Grid.Column="1" Margin="0, 0">
-                <Grid>
-                    <Label Content="Doppelklick auf die Rechnungsnummer für Details"/>
-                    <Button Width="100" Click="Button_Status_ändern_Rechnungen" Content="Speichern" HorizontalAlignment="Right"/>
-                </Grid>
-
-                <TextBlock Text="Positionen" FontSize="24" Margin="0,10,0,0"/>
-                <DataGrid  Name="Grid_Rechnungselemente" 
-                      Style="{StaticResource Datagrid}"
-                      ItemsSource="{Binding }" IsReadOnly="True">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}"  Width="*"/>
-                        <DataGridTextColumn Header="Produkt" Binding="{Binding Speise.Produkt_Name}"  Width="*"/>
-                        <DataGridTextColumn Header="Beschreibung" Binding="{Binding Speise.Beschreibung}"  Width="2*"/>
-                        <DataGridTextColumn Header="Preis" Binding="{Binding Speise.Preis}"  Width="2*"/>
-                        <DataGridTextColumn Header="Anzahl" Binding="{Binding Anzahl}"  Width="*"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-                <WrapPanel HorizontalAlignment="Right">
-                    <TextBlock Text="Insgesamt:" Margin="5,0"/>
-                    <TextBlock x:Name="Total" />
-                    <TextBlock Text="€" />
-                </WrapPanel>
-            </StackPanel>
-        </Grid>
-
-        <Grid x:Name="MainGrid_Rechungen_erstellen" >
+        <Grid x:Name="MainGrid_Rechungen_erstellen" d:IsHidden="True" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="150"/>
                 <RowDefinition Height="5*"/>
@@ -186,7 +127,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
-
+            <TextBlock Text="Rechnungen erstellen" Style="{StaticResource Überschrift}"  Grid.Column="1" Grid.ColumnSpan="2"/>
             <ListView Grid.Row="1" Grid.Column="1"
                   x:Name="SpeiseAufnehmen" 
                   IsSynchronizedWithCurrentItem="True"
@@ -209,11 +150,18 @@
             </ListView>
 
             <WrapPanel Grid.Row="1" Grid.Column="2" >
-                <TextBlock Margin="10" Text="Mitarbeiter ID:"/>
-                <TextBox x:Name="ID_Mitarbeiter" Width="100"/>
+                <WrapPanel.Resources>
+                    <Style TargetType="TextBox">
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="VerticalContentAlignment" Value="Center"/>
+                        <Setter Property="Width" Value="100"/>
+                    </Style>
+                </WrapPanel.Resources>
+                <TextBlock Margin="10" Text="Mitarbeiter ID:" />
+                <TextBox x:Name="ID_Mitarbeiter"/>
 
                 <TextBlock Margin="10" Text="Tischnummer:"/>
-                <TextBox x:Name="Tischnummer" Width="100"/>
+                <TextBox x:Name="Tischnummer"/>
                 <DataGrid ItemsSource="{Binding }" Name="Bestellung" AutoGenerateColumns="False" IsReadOnly="True" MouseDoubleClick="Delete">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Produkt ID" Binding="{Binding Speise.Produkt_ID}" Width="*"/>
@@ -227,6 +175,61 @@
                 <TextBlock Text="€" />
             </WrapPanel>
             <Button Grid.Column="2" Grid.Row="2" Click="Rechnung_Speichern" Content="Rechnung erstellen"/>
+        </Grid>
+
+
+        <Grid x:Name="MainGrid_Rechnungsübersicht" d:IsHidden="True" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Rechnungsübersicht" Style="{StaticResource Überschrift}" Grid.Column="1"/>
+            <DataGrid Grid.Row="1" Grid.Column="1" 
+                      Name="Grid_Rechnungen"
+                      Style="{StaticResource Datagrid}"
+                      ItemsSource="{Binding }"                                
+                      MouseDown="Grid_Rechnungen_MouseDown" >
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}" Width="*" IsReadOnly="True" />
+                    <DataGridTextColumn Header="Status" Binding="{Binding Rechnung_status}" Width="*"/>
+                    <DataGridTextColumn Header="Datum" Binding="{Binding Rechnung_datum}" Width="1.5*"/>
+                    <DataGridTextColumn Header="Tischnummer" Binding="{Binding Tisch_ID}" Width="0.4*"/>
+                    <DataGridTextColumn Header="Vorname" Binding="{Binding Mitarbeiter.Vorname}" Width="*"/>
+                    <DataGridTextColumn Header="Nachname" Binding="{Binding Mitarbeiter.Nachname}" Width="*"/>
+                    <DataGridTextColumn Header="Email" Binding="{Binding Mitarbeiter.Email}" Width="2*"/>
+                    <DataGridTextColumn Header="Telefon" Binding="{Binding Mitarbeiter.Telefon}" Width="*"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <StackPanel Grid.Row="2" Grid.Column="1" Margin="0, 0">
+                <Grid>
+                    <Label Content="Doppelklick auf die Rechnungsnummer für Details"/>
+                    <Button Width="100" Click="Button_Status_ändern_Rechnungen" Content="Speichern" HorizontalAlignment="Right"/>
+                </Grid>
+                <TextBlock Text="Positionen" FontSize="24" Margin="0,10,0,0"/>
+                <DataGrid  Name="Grid_Rechnungselemente" 
+                      Style="{StaticResource Datagrid}"
+                      ItemsSource="{Binding }" IsReadOnly="True">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Rechnungsnummer" Binding="{Binding Rechnung_id}"  Width="*"/>
+                        <DataGridTextColumn Header="Produkt" Binding="{Binding Speise.Produkt_Name}"  Width="*"/>
+                        <DataGridTextColumn Header="Beschreibung" Binding="{Binding Speise.Beschreibung}"  Width="2*"/>
+                        <DataGridTextColumn Header="Preis" Binding="{Binding Speise.Preis}"  Width="2*"/>
+                        <DataGridTextColumn Header="Anzahl" Binding="{Binding Anzahl}"  Width="*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <WrapPanel HorizontalAlignment="Right">
+                    <TextBlock Text="Insgesamt:" Margin="5,0"/>
+                    <TextBlock x:Name="Total" />
+                    <TextBlock Text="€" />
+                </WrapPanel>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
